--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-placeholder
+<!DOCTYPE html>
+<html>
+<head>
+<title>BolteezyBolttezy</title>
+</head>
+<body>
+
+<div>
+	<ul>
+		<li>Home</li>
+		<li>Projects</li>
+		<li>Pictures</li>
+		<li>About</li>
+	</ul>
+
+</div>
+
+<div>
+	<p>Content on this site is of my own opinion</p>
+</div>
+
+</body>
+</html>
