--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html>
 <head>
 <title>BolteezyBolttezy</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<div>
+<div class="navtop">
 	<ul>
 		<li>Home</li>
 		<li>Projects</li>
 		<li>Pictures</li>
 		<li>About</li>
 	</ul>
-
 </div>
 
-<div>
+<div class="content">
+	
+</div>
+
+<div class="footer">
 	<p>Content on this site is of my own opinion</p>
 </div>
 
