Images and colors
Messing with color palettes and images.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 </div>
 
 <div class="content">
-	
+	<div class="background-image">
+			<img src="images/background.jpg" alt="Pizza">
+			<img src="images/water.jpg" alt="water">
+			<img src="images/flag.jpg" atl="flag">
+	</div>
 </div>
 
 <div class="footer">
