--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="content">
 	<div class="background-image">
 			<img src="images/background.jpg" alt="Pizza">
-			<img src="images/water.jpg" alt="water">
+				<p>Section made with CSS</p>
 			<img src="images/flag.jpg" atl="flag">
 	</div>
 </div>
